# wolfram-rust-library

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
_legacy_xtask_ll/: Cargo.toml
_legacy_xtask_wstp/: Cargo.toml
notebooks/: TechTalk.nb  benchmark.wl  test.nb
scripts/: add-new-crate-owners.sh  benchmark.wl  publish-alpha.sh
wolfram-app-discovery/: Cargo.toml
wolfram-app-discovery/docs/: CHANGELOG.md
wolfram-app-discovery/src/: lib.rs
wolfram-cli/: Cargo.toml  README.md
wolfram-cli/commands/: test.wl
wolfram-cli/docs/: CHANGELOG.md
wolfram-cli/src/: build.rs  commands.rs  lib.rs  main.rs
wolfram-examples/: Cargo.toml
wolfram-examples-internal/: Cargo.toml
wolfram-examples-internal/src/: chrono_dates.rs  core.rs  legacy_wstp.rs  lib.rs  margs.rs  mem.rs  native.rs  wstp.rs  wxf.rs
wolfram-examples-internal/tests/: Example.wlt  validation_result.rs
wolfram-examples/duckdb/: Cargo.toml
wolfram-examples/duckdb/src/: lib.rs
wolfram-examples/examples/: duckdb.rs  foreign_functions.rs  legacy_native.rs  legacy_wstp.rs  mixed.rs  types_native.rs  types_wstp.rs  types_wxf.rs  types_wxf_ffi.rs
wolfram-examples/math/: Cargo.toml
wolfram-examples/math/src/: lib.rs
wolfram-examples/mixed/: Cargo.toml
wolfram-examples/mixed/src/: lib.rs
wolfram-examples/src/: duckdb.rs  lib.rs
wolfram-examples/tests/: Duckdb.wlt  Example.wl  Example.wlt  Mixed.wlt  validation_result.rs
wolfram-export/: Cargo.toml  README.md
wolfram-export-core/: Cargo.toml  README.md
wolfram-export-core/docs/: CHANGELOG.md
wolfram-export-core/src/: lib.rs
wolfram-export-macros/: Cargo.toml  README.md
wolfram-export-macros/docs/: CHANGELOG.md
wolfram-export-macros/src/: export.rs  lib.rs
wolfram-export-native/: Cargo.toml
wolfram-export-native/src/: lib.rs
wolfram-export-wstp/: Cargo.toml
wolfram-export-wstp/src/: lib.rs
wolfram-export-wxf/: Cargo.toml
wolfram-export-wxf/examples/: point.rs
wolfram-export-wxf/src/: lib.rs  macro_utils.rs
wolfram-export-wxf/tests/: manifest_smoke.rs  point_roundtrip.rs
wolfram-export/docs/: CHANGELOG.md
wolfram-export/src/: lib.rs
wolfram-export/src/native/: macro_utils.rs
wolfram-export/src/wstp/: macro_utils.rs  mod.rs
wolfram-export/src/wxf/: macro_utils.rs
wolfram-export/src/wxf_ffi/: macro_utils.rs  mod.rs
wolfram-expr/: Cargo.toml
wolfram-expr/docs/: CHANGELOG.md
wolfram-expr/src/: array_buf.rs  association.rs  bignum.rs  complex.rs  conversion.rs  lib.rs  macros.rs  numeric_array.rs  packed_array.rs  ptr_cmp.rs  symbol.rs  tests.rs  wl.rs  wxf.rs  wxf_impls.rs
wolfram-expr/src/symbol/: parse.rs
wolfram-expr/tests/: enum_head_transparent.rs  expr_runtime.rs  expr_symbols.rs  failure_derive.rs  failure_macro.rs  wxf_borrowed.rs  wxf_derive_smoke.rs  wxf_errors.rs  wxf_kernel_fixtures.rs  wxf_numeric_widen.rs  wxf_roundtrip.rs  wxf_std_enums.rs
wolfram-library-link/: Cargo.toml
wolfram-library-link-macros/: Cargo.toml
wolfram-library-link-sys/: Cargo.toml
wolfram-library-link/RustLink/Examples/: Aborts.wlt  AsyncExamples.wlt  BasicTypes.wlt  DataStore.wlt  Expressions.wlt  ManagedExpressions.wlt  NumericArrays.wlt  RawFunctions.wlt  WSTP.wlt
wolfram-library-link/RustLink/Examples/Docs/Convert/: ManualWSTP.wlt  UsingExpr.wlt
wolfram-library-link/RustLink/Examples/Docs/EvaluateWolframCodeFromRust/: GenerateMessage.wlt
wolfram-library-link/RustLink/Tests/: DataStore.wlt  Images.wlt  NativeArgs.wlt  NumericArrayConversions.wlt  ShareCounts.wlt  Threading.wlt  WSTP.wlt
wolfram-library-link/docs/: CHANGELOG.md
wolfram-library-link/examples/: wstp.rs
wolfram-library-link/examples/docs/convert/: using_expr.rs
wolfram-library-link/examples/docs/evaluate_wolfram_code_from_rust/: generate_message.rs
wolfram-library-link/examples/exprs/: basic_expressions.rs  managed.rs
wolfram-library-link/examples/raw/: raw_wstp_function.rs
wolfram-library-link/examples/tests/: test_threading.rs
wolfram-library-link/src/: args.rs  catch_panic.rs  docs.rs  errors.rs  lib.rs  macro_utils.rs  numeric_array.rs  rtl.rs
wolfram-library-link/src/docs/: converting_between_rust_and_wolfram_types.rs  using_wxf_mode.rs
wolfram-serialize/: Cargo.toml  README.md
wolfram-serialize-macros/: Cargo.toml  README.md
wolfram-serialize-macros/docs/: CHANGELOG.md
wolfram-serialize-macros/src/: deserialize.rs  failure_derive.rs  lib.rs  serialize.rs  shared.rs  ty_classify.rs
wolfram-serialize/docs/: CHANGELOG.md
wolfram-serialize/src/: complex.rs  constants.rs  errors.rs  from_wxf.rs  lib.rs  numeric_in.rs  reader.rs  strategy.rs  to_wxf.rs  via.rs  writer.rs
wolfram-serialize/src/wxf/: mod.rs  reader.rs  writer.rs
wolfram-serialize/tests/: bignum_scalar.rs  symbol_head.rs  vendor_shapes.rs
wolfram-serializer/: Cargo.toml
wolfram-serializer-macros/src/: deserialize.rs  lib.rs  serialize.rs  shared.rs  ty_classify.rs
wolfram-serializer/src/: consumer.rs  derive_support.rs  from_wolfram.rs  from_wxf.rs  lib.rs  numeric_in.rs  reader.rs  serializer.rs  to_wxf.rs  wl.rs  writer.rs
wolfram-serializer/src/wxf/: cursor.rs  deserialize.rs  mod.rs  reader.rs  writer.rs
wolfram-serializer/tests/: derive_smoke.rs  wl_golden.rs  wolframscript_xvalid.rs  wxf_kernel_fixtures.rs  wxf_roundtrip.rs
wolfram-serializer/tests/fixtures/: wxf_kernel_fixtures.rs
wolfram-wxf/: Cargo.toml
wolfram-wxf-macros/: Cargo.toml
wolfram-wxf-macros/src/: deserialize.rs  error.rs  failure_derive.rs  lib.rs  serialize.rs  shared.rs  ty_classify.rs
wolfram-wxf/src/: complex.rs  errors.rs  from_wxf.rs  lib.rs  numeric_in.rs  reader.rs  strategy.rs  to_wxf.rs
wolfram-wxf/src/wxf/: mod.rs  reader.rs  varint.rs  writer.rs
wstp/: Cargo.toml
wstp-sys/: Cargo.toml  build.rs
wstp/docs/: CHANGELOG.md
wstp/src/: get.rs  lib.rs
wstp/src/kernel/: mod.rs
wstp/tests/: test_activate_timeout.rs  test_loopback_links.rs
xtask/: Cargo.toml
xtask/src/: main.rs
