[package]
name = "wolfram-examples-internal"
version = "0.6.0"
edition = "2021"
publish = false

[package.metadata.wl.pacletinfo]
name = "WolframExamples"
version = "1.0.0"
output = "../notebooks/"
named-exports = false

[lib]
# "rlib" (in addition to "cdylib") so `tests/validation_result.rs` can link
# against this crate as an ordinary Rust dependency.
crate-type = ["cdylib", "rlib"]

[dependencies]
wolfram-expr = { version = "=0.6.0", path = "../wolfram-expr" }
wolfram-serialize = { version = "=0.6.0", path = "../wolfram-serialize" }
wolfram-serialize-macros = { version = "=0.6.0", path = "../wolfram-serialize-macros" }
wolfram-export = { version = "=0.6.1", path = "../wolfram-export", features = ["wxf"] }
wolfram-library-link = { version = "=0.6.1", path = "../wolfram-library-link", default-features = false, features = ["panic-failure-backtraces", "automate-function-loading-boilerplate"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"], optional = true }
chrono-tz = { version = "0.10", optional = true }

[features]
default = ["vendor-chrono"]

# Pulls in wstp-sys, which needs a WSTP SDK for the target platform. Off by
# default so a plain `cargo build`/`check` (e.g. when cross-compiling) doesn't
# require one. Gates the `legacy_wstp` and `wstp` modules (see src/lib.rs).
wstp = ["wolfram-export/wstp", "wolfram-library-link/wstp"]

# Gates the `chrono_dates` module (see src/lib.rs), which exercises
# `wolfram-expr`'s `vendor-chrono` DateObject bridge over WXF.
vendor-chrono = ["dep:chrono", "wolfram-expr/vendor-chrono"]

# Gates the named-IANA-zone functions in `chrono_dates` (see src/lib.rs),
# which exercise `wolfram-expr`'s `vendor-chrono-tz` bridge.
vendor-chrono-tz = ["dep:chrono-tz", "vendor-chrono", "wolfram-expr/vendor-chrono-tz"]
