[workspace]
resolver = "2"

# A standalone workspace — not part of the main repo workspace (see the root
# Cargo.toml's `exclude`). These are copy-paste-able sample crates: they depend
# on the published crates.io releases of this repo's crates, not local paths.
members = [
    "duckdb",
    "mixed",
]
