[package]
name = "wolfram-export-macros"
version = "0.6.0-alpha.4"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/WolframResearch/wolfram-rust-library"
description = "Procedural macros for #[export_native], #[export_wstp], #[export_wxf]"
keywords = ["wolfram", "wolfram-library-link", "librarylink", "wstp", "macros"]
categories = ["external-ffi-bindings", "development-tools::ffi"]
readme = "README.md"

include = [
    "/src",
    "/docs",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
syn = { version = "1.0.85", features = ["full"] }
quote = "1.0.14"
# At macro-expansion time, look up which crate the *user* has in their Cargo.toml
# (`wolfram-export` vs the legacy `wolfram-library-link`) so the emitted code
# resolves through the right host crate path.
proc-macro-crate = "3"

# Doc-example only: the rustdoc examples expand `#[export]` into code that names
# `::wolfram_export::*` (resolved via `proc-macro-crate`), so the runtime crates
# must be present to compile them. These crates depend back on this one, but
# Cargo permits dev-dependency cycles.
[dev-dependencies]
wolfram-export = { version = "=0.6.0-alpha.4", path = "../wolfram-export", features = ["native", "wstp", "wxf"] }
wolfram-expr = { version = "=0.6.0-alpha.4", path = "../wolfram-expr" }
wolfram-serialize = { version = "=0.6.0-alpha.4", path = "../wolfram-serialize" }

[features]
default = []
automate-function-loading-boilerplate = []
