[package]
name = "wolfram-expr"
version = "0.6.0"
authors = ["Connor Gray <code@connorgray.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/WolframResearch/wolfram-rust-library"
description = "Efficient and ergonomic representation of Wolfram expressions in Rust"
keywords = ["wolfram", "wolfram-language", "mathematica", "wolfram-engine", "expression"]
categories = ["encoding"]

[features]
default = []

# Whether to publically export nom functions for parsing symbols. This feature should not
# be considered stable -- it is included only so that wl-parse can build higher-level
# expression parsing on top of it.
unstable_parse = []

# Conversions between `chrono` date/time types and `DateObject` expressions.
vendor-chrono = ["wolfram-serialize/vendor-chrono"]

# Conversions between `chrono-tz` named IANA time zones and `DateObject` expressions.
vendor-chrono-tz = ["wolfram-serialize/vendor-chrono-tz"]

# Conversions between `num-bigint` arbitrary-precision integers and `BigInteger` expressions.
vendor-num-bigint = ["wolfram-serialize/vendor-num-bigint"]

# Conversions between `num-complex` complex numbers and `Complex[re, im]` expressions.
vendor-num-complex = ["wolfram-serialize/vendor-num-complex"]

[dependencies]
ordered-float = "3.4.0"
wolfram-serialize = { version = "=0.6.0", path = "../wolfram-serialize" }
base64 = "0.22"
