[package]
name = "wolfram-serialize-macros"
version = "0.6.0-alpha.2"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/WolframResearch/wolfram-rust-library"
description = "Procedural macros (#[derive(ToWXF, FromWXF)]) for wolfram-serialize"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
syn = { version = "1.0.85", features = ["full", "extra-traits"] }
quote = "1.0.14"
