[package]
name = "wolfram-serialize-macros"
version = "0.6.0-alpha.4"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/WolframResearch/wolfram-rust-library"
description = "Procedural macros (#[derive(ToWXF, FromWXF)]) for wolfram-serialize"
keywords = ["wolfram", "wxf", "wolfram-language", "serialization", "macros"]
categories = ["encoding"]
readme = "README.md"

include = [
    "/src",
    "/docs",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
syn = { version = "1.0.85", features = ["full", "extra-traits"] }
quote = "1.0.14"

# Doc-example only: the derives emit `::wolfram_serialize::*` paths, so the
# rustdoc examples need the runtime crate present to compile. `wolfram-serialize`
# depends back on this crate, but Cargo permits dev-dependency cycles.
[dev-dependencies]
wolfram-serialize = { version = "=0.6.0-alpha.4", path = "../wolfram-serialize" }
wolfram-expr = { version = "=0.6.0-alpha.4", path = "../wolfram-expr" }
thiserror = "2"
