[package]
name = "wolfram-serialize-macros"
version = "0.6.0"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/WolframResearch/wolfram-rust-library"
description = "Procedural macros (#[derive(ToWXF, FromWXF)]) for wolfram-serialize"
keywords = ["wolfram", "wxf", "wolfram-language", "serialization", "macros"]
categories = ["encoding"]
readme = "README.md"

include = [
    "/src",
    "/docs",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
syn = { version = "1.0.85", features = ["full", "extra-traits"] }
quote = "1.0.14"

# Doc-example only: the derives emit `::wolfram_serialize::*` paths, so the
# rustdoc examples need the runtime crate present to compile. `wolfram-serialize`
# depends back on this crate, but Cargo permits dev-dependency cycles.
#
# The version requirement here is deliberately a loose (non-`=`) caret range,
# NOT lockstep-bumped with this crate's own version: at publish time it
# resolves against whatever's already on crates.io (never the in-flight,
# not-yet-published version), so it doesn't recreate the chicken-and-egg
# problem on every release. Locally, the `path` always wins and these doctests
# run against the current in-repo code regardless of this version string.
[dev-dependencies]
wolfram-serialize = { version = "0.6.0-alpha.3", path = "../wolfram-serialize" }
wolfram-expr = { version = "0.6.0-alpha.3", path = "../wolfram-expr" }
thiserror = "2"
