[package]
name = "wolfram-wxf"
version = "0.5.0"
authors = ["Wolfram Research"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/WolframResearch/wolfram-rust-library"
description = "WXF binary wire format: tokens, cursor, ToWXF/FromWXF traits"
keywords = ["wolfram", "wxf", "wolfram-language", "serialization", "mathematica"]
categories = ["encoding"]

[dependencies]
wolfram-wxf-macros = { version = "0.5.0", path = "../wolfram-wxf-macros" }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
num_enum = "0.7"
