[package]
name = "math"
version = "0.6.0-alpha.6"
edition = "2021"
publish = false

[package.metadata.wl.pacletinfo]
name = "WolframExamples"
version = "1.0.0"
namespace = "math"
named-exports = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wolfram-export = { version = "=0.6.0-alpha.6", features = ["wxf"] }
wolfram-expr = { version = "=0.6.0-alpha.6" }
wolfram-serialize = { version = "=0.6.0-alpha.6" }
wolfram-library-link = { version = "=0.6.0-alpha.6", default-features = false, features = ["panic-failure-backtraces"] }
